--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,4 +11,7 @@ ark-poly = "0.4"
 ark-std = "0.4"
 rand_chacha = "0.3"
 ark-bn254 = "0.4"
+ark-bls12-381 = "0.4"
+ark-r1cs-std = "0.4"
 rand = "0.8"
+ark-relations = "0.4"
