Added actual proof-construction and verifier

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ license = "MIT"
 ark-ff = "0.4"
 ark-poly = "0.4"
 ark-std = "0.4"
+ark-ec = "0.4"
 rand_chacha = "0.3"
 ark-bn254 = "0.4"
 ark-bls12-381 = "0.4"
